# qa-agent

./: .gitignore  README.md  pyproject.toml
docs/: nodes.md  rule.md
examples/: math.js
src/: __init__.py  main.py
src/constants/languages/: __init__.py  config.py  javascript.py  typescript.py
src/middleware/: __init__.py  logger.py
src/script/: copy.js
src/utils/: __init__.py  hitl.py  llm.py  logger.py  sandbox.py
src/workflow/: __init__.py  graph.py  state.py
src/workflow/nodes/: __init__.py  analyze_project.py  build_todo_list.py  clone_files.py  clone_repo.py  discover_files.py  execute_test.py  extract_files.py  finalize_file.py  generate_report.py  generate_test.py  identify_edge_cases.py  init_docker.py  plan_strategy.py  run_test.py  select_next_file.py  setup_sandbox.py  teardown.py
