[project]
name = "qa-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # Core Agent Framework
    "docker>=7.1.0",
    "langchain>=1.3.1",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langgraph>=1.2.1",
    # LLM Integration (Docker-based models)
    "langchain-openai>=1.2.2",
    "httpx>=0.28.1",
    # CLI Framework
    "typer>=0.25.1",
    "rich>=15.0.0",
    # Code Analysis
    "tree-sitter>=0.25.2",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    # Configuration & State
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    # Git Operations
    "gitpython>=3.1.50",
    # Utilities
    "pathspec>=1.1.1",
    "sh>=2.2.2",
]

[project.scripts]
dev = "python ./src/main.py"